# link-blogger

./: .gitignore  README.md  generate-link-blogpost.py  generate_link_post.py  pyproject.toml  wrapped_up_readings_2025-01-21.md
.conf/: introduction_prompt.yaml  summarization_prompt.yaml  topics.conf
link_blogger/: classifier.py  file_parser.py  markdown_writer.py  summarizer.py
summaries/: wrapped_up_readings_2025-01-17.md
tests/: __init__.py  test_classifier.py  test_file_parser.py  test_generate_link_post.py  test_markdown_writer.py  test_summarizer.py
