[project]
name = "link-blogger"
version = "0.1.0"
description = "Allows you to generate summaries of recent readings located in local files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.59.7",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
